--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
-  text-align: center;
+.project-overview {
+  border: 1px solid black;
+  margin: 1rem 0;
+  padding: 1rem;
+  width: 100%; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.project-overview__button {
+  border: 1px solid blue;
+  display: inline-block;
+  padding: .5em 1em;
+  width: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image-box__img {
+  width: 100%;
+  height: auto;
 }
