feat: site header updates

--- a/src/index.css
+++ b/src/index.css
@@ -64,8 +64,8 @@ p {
 /* Colors */
 * {
   --primary: #4b2f86;
-  --secondary: #428086;
-  --tertiary: #E81152;
+  --secondary: #5ea8af;
+  --tertiary: #451c28;
   --background: #ffffff;
   --text-color: #222624;
   --inverse-text-color: #ffffff;
