--- a/src/App.css
+++ b/src/App.css
@@ -14,24 +14,39 @@ a:visited {
 .site-header {
   background-color: var(--secondary);
   color: var(--inverse-text-color);
-  padding: var(--small);
+  padding: var(--small) var(--x-small) var(--xxx-small);
   margin-bottom: var(--small);
   margin-top: -1rem;
   margin-right: -1rem;
   margin-left: -1rem;
+  display: flex;
 }
 
 .site-header__logo {
   filter: brightness(0);
+  flex-grow: 50px;
+  flex-shrink: 50px;
+  max-height: 32px;
 }
 
 .site-header nav {
   text-align: right;
+  flex-grow: 5;
+  margin-top: .4rem;
 }
 
 .site-header a {
-  margin: 0 1rem;
+  border-bottom: 2px solid var(--secondary);
+  margin: 0 .5rem;
+  font-weight: 500;
+  padding-bottom: .4rem;
   text-decoration: none;
+}
+
+.site-header a:hover,
+.site-header a:focus {
+  color: var(--tertiary);
+  border-bottom-color: var(--tertiary);
 }
 
 .project-overview {
