--- a/src/App.css
+++ b/src/App.css
@@ -133,3 +133,20 @@ h3 {
   width: 100%;
   height: auto;
 }
+
+.site-footer {
+  background-color: var(--secondary);
+  color: var(--inverse-text-color);
+  margin: 0 -1rem -1rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.site-footer__title {
+  font-size: var(--large);
+  color: var(--inverse-text-color);
+}
+
+.site-footer a {
+  color: var(--inverse-text-color);
+}
