--- a/src/App.css
+++ b/src/App.css
@@ -32,12 +32,13 @@ h3 {
 .site-content {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 var(--medium);
 }
 
 .site-header {
   background-color: var(--secondary);
   color: var(--inverse-text-color);
-  padding: var(--small) var(--x-small) var(--xxx-small);
+  padding: var(--small) var(--large) var(--xxx-small);
   margin-bottom: var(--small);
   margin-top: -1rem;
   margin-right: -1rem;
@@ -69,6 +70,10 @@ h3 {
   border-bottom-color: var(--tertiary);
 }
 
+.stages {
+  margin-bottom: -.9rem;
+}
+
 .projects {
   position: relative;
 }
@@ -80,7 +85,7 @@ h3 {
   border-right: 4px solid;
   border-bottom: 2px solid;
   margin: 0;
-  padding: 1rem;
+  padding: 1.5rem;
   width: 100%;
 }
 
@@ -169,6 +174,7 @@ h3 {
 
 @media screen and (min-width: 36rem) {
   .project-overview__description {
+    margin-top: 0;
     margin-left: 1rem;
     max-width: 33%;
   }
@@ -178,6 +184,10 @@ h3 {
   }
 
   .project-overview__text {
+    margin-top: 0;
+  }
+
+  .project-overview__text h3 {
     margin-top: 0;
   }
 }
