fix: color scheme light gradient

--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@ p {
 * {
   --primary: #4b2f86;
   --secondary: #5ea8af;
-  --tertiary: #451c28;
+  --tertiary: #4b2f86;
   --background: #ffffff;
   --text-color: #24143d;
   --inverse-text-color: #ffffff;
