--- a/src/App.css
+++ b/src/App.css
@@ -100,9 +100,9 @@ a.site-header__logo-link:hover {
   position: relative;
 }
 
-@media screen and (min-width: 24rem) {
+@media screen and (min-width: 27rem) {
 .projects:before {
-  content: ">";
+  content: "\25B6";
   position: absolute;
   font-family: 'Signika Negative', sans-serif;
   color: var(--primary);
@@ -117,19 +117,19 @@ a.site-header__logo-link:hover {
 
 @media screen and (min-width: 32rem) {
   .projects:before {
-    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
+    content: "\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6";
   }
 }
 
 @media screen and (min-width: 36rem) {
   .projects:before {
-    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
+    content: "\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6";
   }
 }
 
 @media screen and (min-width: 55rem) {
   .projects:before {
-    content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
+    content: "\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6";
     position: absolute;
     font-family: 'Signika Negative', sans-serif;
     color: var(--primary);
@@ -137,7 +137,7 @@ a.site-header__logo-link:hover {
     line-height: 1.3em;
     font-size: 2em;
     width: 100%;
-    margin-top: 1.25rem;
+    margin-top: 1.35rem;
     padding-left: 0;
   }
 }
@@ -181,7 +181,7 @@ a.site-header__logo-link:hover {
 }
 
 .project-overview:after {
-  content: "<\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0<\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0<";
+  content: "\25C0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25C0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25C0";
   position: absolute;
   font-family: 'Signika Negative', sans-serif;
   color: var(--primary);
@@ -189,11 +189,11 @@ a.site-header__logo-link:hover {
   line-height: 1.3em;
   font-size: 2em;
   width: 100%;
-  margin-top: .25rem;
+  margin-top: .35rem;
 }
 
 .project-overview:nth-of-type(even):after {
-  content: ">\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0>";
+  content: "\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6\00a0\00a0\00a0\00a0\00a0\00a0\00a0\00a0\25B6";
 }
 
 .project-overview:nth-last-of-type(1):after {
