--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }
 
 img { border: 0; }
 
+:root {
+  font-size: 18px;
+}
+
 /* Overall Styles */
 
 * {
@@ -49,17 +53,17 @@ p {
 
 /* Font sizes 5, 7, 9, 12, 16, 21, 28, 37, 50, 67, 83 https://www.lambdatest.com/blog/guide-to-css-variables-with-examples/ */
 * {
-  --xxx-small: 5px;
-  --xx-small: 7px;
-  --x-small: 9px;
-  --small: 12px;
-  --medium: 16px;
-  --large: 21px;
-  --x-large: 28px;
-  --xx-large: 37px;
-  --xxx-large: 50px;
-  --xxxx-large: 67px;
-  --xxxxx-large: 83px
+  --xxx-small: .3125rem;
+  --xx-small: .4375rem;
+  --x-small: .5625rem;
+  --small: .75rem;
+  --medium: 1rem;
+  --large: 1.3125rem;
+  --x-large: 1.75rem;
+  --xx-large: 2.3125rem;
+  --xxx-large: 3.125rem;
+  --xxxx-large: 4.1875rem;
+  --xxxxx-large: 5.1875;
 }
 
 /* Colors */
