--- a/src/App.css
+++ b/src/App.css
@@ -321,7 +321,7 @@ a.site-header__logo-link:hover {
 .site-footer {
   background-image: linear-gradient(to right, var(--secondary) 25%, var(--tertiary) 100%);
   color: var(--inverse-text-color);
-  margin: 0 -1rem -1rem;
+  margin: 3rem -1rem -1rem;
   padding: 1rem;
   text-align: center;
 }
